# verovio-rust

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: porting.md  rendering.md
src/: import.rs  layout.rs  lib.rs  render.rs  score.rs  smufl.rs
tests/: file_line_count.rs  toolkit_tests.rs
